Modifs page Home

--- a/home.html
+++ b/home.html
@@ -10,6 +10,21 @@
     <title>Accueil</title>
 </head>
 <body>
-    
+    <main>
+        <article>
+            <h2>
+                La VéloCharbon.
+            </h2>
+            <p>
+                La VéloCharbon est un itinéraire qui part de Calais, jusqu’à Lille et la Belgique en passant par le marais Audomarois. 
+            </p>
+            <img src="img/pictos-velodyssee3.jpg" alt="icones">
+            <form>
+                <legend>Pédalez selon vos envies</legend>
+                <label for="difficultes"></label>
+                <
+            </form>
+        </article>
+    </main>
 </body>
 </html>
