Modifs page Home: ajout texte

--- a/home.html
+++ b/home.html
@@ -77,6 +77,12 @@
             <h2>
                 Ils l'ont fait
             </h2>
+            <p>
+                Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
+            </p>
+            <button>
+                Tous les témoignages
+            </button>
         </article>
     </main>
 </body>
