Modifs page Home: ajout texte

--- a/home.html
+++ b/home.html
@@ -84,6 +84,53 @@
                 Tous les témoignages
             </button>
         </article>
+        <article>
+            <h2>
+                Les derniers avis publiés !
+            </h2>
+            <p>
+                Les avis et commentaires de voyageurs à vélo sur nos parcours.
+                N'hésitez pas à déposer le votre sur les tracés que vous avez déjà parcourus !
+            </p>
+            <section>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+        </article>
+        <article>
+            <h2>
+                La douceur de l'Atlantique à portée de roues !
+            </h2>
+            <p>
+                Idées week-end, nouveautés et tutos pour s'élancer dans une aventure à vélo.
+            </p>
+            <section>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+            </section>
+        </article>
+        <article>
+            <h2>
+                Partez en voyage, ils organisent tout pour vous !
+            </h2>
+            <p>
+                Besoin d'aide pour organiser vos vacances ? Premier voyage à vélo ?
+                Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
+            </p>
+            <div></div>
+            <div></div>
+            <div></div>
+            <button>
+                Tous les séjours
+            </button>
+        </article>
     </main>
 </body>
 </html>
