--- a/home.html
+++ b/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <main>
-        <article>
+        <article id="presentation">
             <h2>
                 La VéloCharbon.
             </h2>
