Déplacement du CSS depuis _main_section à _home.scss

--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
             <p>
                 Accueil Vélo est une marque qui garantit des services de qualité auprès des cyclistes le long de l'itinéraire
             </p>
-            <ul>
+            <ul class="blocs_en_ligne">
                 <li>
                     Hébergements
                 </li>
@@ -92,7 +92,7 @@
                 Les avis et commentaires de voyageurs à vélo sur nos parcours.
                 N'hésitez pas à déposer le votre sur les tracés que vous avez déjà parcourus !
             </p>
-            <section>
+            <section class="blocs_en_ligne">
                 <div></div>
                 <div></div>
                 <div></div>
@@ -124,12 +124,14 @@
                 Besoin d'aide pour organiser vos vacances ? Premier voyage à vélo ?
                 Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
             </p>
-            <div></div>
-            <div></div>
-            <div></div>
-            <button>
-                Tous les séjours
-            </button>
+            <section class="blocs_en_ligne">
+                <div></div>
+                <div></div>
+                <div></div>
+                <button>
+                    Tous les séjours
+                </button>
+            </section>
         </article>
     </main>
 </body>
