Ajout images dans components (SCSS) + ajout images page Home

--- a/home.html
+++ b/home.html
@@ -60,15 +60,19 @@
             </p>
             <ul class="blocs_en_ligne">
                 <li>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
                     Hébergements
                 </li>
                 <li>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
                     Lieux de visite
                 </li>
                 <li>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
                     Offices de Tourisme
                 </li>
                 <li>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
                     Loueurs et réparateurs de vélo
                 </li>
             </ul>
