--- a/nav.html
+++ b/nav.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="scss/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.css">
 
     <title>Accueil</title>
 </head>
@@ -25,15 +26,19 @@
         </nav>
 
         <div class="swiper mySwiper">
-            <figure class="swiper-slide"><img src="img/patrimoine-remarquable_news_image_top.jpg" alt=""></figure>
-            <figure class="swiper-slide"><img src="img/B9724016803Z.1_20200716164949_000+GD1GB7220.1-0.jpg" alt=""></figure>
-            <figure class="swiper-slide"><img src="img/St_omer_cathedrale_ND.jpg" alt=""></figure>
+            <div class="swiper-wrapper">
+                <figure class="swiper-slide"><img src="img/patrimoine-remarquable_news_image_top.jpg" alt=""></figure>
+                <figure class="swiper-slide"><img src="img/B9724016803Z.1_20200716164949_000+GD1GB7220.1-0.jpg" alt="">
+                </figure>
+                <figure class="swiper-slide"><img src="img/St_omer_cathedrale_ND.jpg" alt=""></figure>
 
-            <figure class="swiper-pagination"></figure>
+                <figure class="swiper-pagination"></figure>
+            </div>
         </div>
     </header>
 
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/7.4.1/swiper-bundle.min.js"></script>
+    <script src="js/header.js"></script>
 </body>
 
 </html>
