--- a/news.html
+++ b/news.html
@@ -18,8 +18,13 @@
             <h3>Toutes nos news pour bien préparer votre voyage sur l'itinéraire de La Vélodyssée.</h3>
         </header>
         <section>
+            <div class="food">
+
+
+            </div>
         </section>
     </article>
+    <script src="js/API/index.js"></script> 
 </body>
 
 </html>
