--- a/itineraire.html
+++ b/itineraire.html
@@ -10,6 +10,14 @@
     <title>Intinéraire</title>
 </head>
 <body>
-    
+    <div class="itineraire-grid">
+        <div class="container-etapes">
+
+        </div>
+        <div class="container-map">
+
+        </div>
+    </div>
+    <script src="js/API/itineraire.js"></script>
 </body>
 </html>
