Déplacement du contenu de  main_section.scss vers home.scss

--- a/home.html
+++ b/home.html
@@ -16,7 +16,7 @@
                 La VéloCharbon.
             </h2>
             <p>
-                La VéloCharbon est un itinéraire qui part de Calais, jusqu’à Lille et la Belgique en passant par le marais Audomarois. 
+                La VéloCharbon est un itinéraire qui part de Calais, jusqu’à Lille et la Belgique en passant par le marais Audomarois. Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. 
             </p>
             <img src="img/pictos-velodyssee3.jpg" alt="icones">
             <form>
@@ -51,7 +51,7 @@
                 <button type="submit">Trouver mon parcours idéal</button>
             </form>
         </article>
-        <article>
+        <article id="TrouverVelo">
             <h2>
                 Trouver mon Accueil vélo
             </h2>
