Modifs page Home

--- a/home.html
+++ b/home.html
@@ -61,29 +61,34 @@
             <ul class="blocs_en_ligne">
                 <li>
                     <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                    Hébergements
+                    <div class="TexteSurPhoto">Hébergements</div>
                 </li>
                 <li>
                     <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                    Lieux de visite
+                    <div class="TexteSurPhoto">Lieux de visite</div>
                 </li>
                 <li>
                     <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                    Offices de Tourisme
+                    <div class="TexteSurPhoto">Office de Tourisme</div>
                 </li>
                 <li>
                     <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                    Loueurs et réparateurs de vélo
+                    <div class="TexteSurPhoto">Loueurs et réparateurs de vélo</div>
                 </li>
             </ul>
         </article>
-        <article>
+        <article id="Experiences">
             <h2>
                 Ils l'ont fait
             </h2>
             <p>
                 Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
             </p>
+            <section id="experiences_photos">
+                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+            </section>
             <button>
                 Tous les témoignages
             </button>
