Modifs page Home

--- a/home.html
+++ b/home.html
@@ -89,16 +89,16 @@
                 <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
                 <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
             </section>
-            <button>
+            <button class="BoutonTransparent">
                 Tous les témoignages
             </button>
         </article>
-        <article>
+        <article class="BlocsContenuCentre">
             <h2>
                 Les derniers avis publiés !
             </h2>
             <p>
-                Les avis et commentaires de voyageurs à vélo sur nos parcours.
+                Les avis et commentaires de voyageurs à vélo sur nos parcours.<br>
                 N'hésitez pas à déposer le votre sur les tracés que vous avez déjà parcourus !
             </p>
             <section class="blocs_en_ligne">
@@ -107,22 +107,40 @@
                 <div></div>
             </section>
         </article>
-        <article>
+        <article class="BlocsContenuCentre">
             <h2>
-                La douceur de l'Atlantique à portée de roues !
+                La douceur du Nord à portée de roues !
             </h2>
             <p>
                 Idées week-end, nouveautés et tutos pour s'élancer dans une aventure à vélo.
             </p>
-            <section>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+            <section id="Grille_main">
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
             </section>
         </article>
         <article>
