--- a/home.html
+++ b/home.html
@@ -143,7 +143,7 @@
                 </div>
             </section>
         </article>
-        <article>
+        <article id="PartezEnVoyage">
             <h2>
                 Partez en voyage, ils organisent tout pour vous !
             </h2>
@@ -152,13 +152,19 @@
                 Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
             </p>
             <section class="blocs_en_ligne">
-                <div></div>
-                <div></div>
-                <div></div>
-                <button>
-                    Tous les séjours
-                </button>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
+                <div>
+                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                </div>
             </section>
+            <button class="BoutonTransparent">
+                Tous les séjours
+            </button>
         </article>
     </main>
 </body>
