page news fini + api

--- a/news.html
+++ b/news.html
@@ -18,8 +18,7 @@
             <h3>Toutes nos news pour bien préparer votre voyage sur l'itinéraire de La Vélodyssée.</h3>
         </header>
         <section>
-            <div class="food">
-
+            <div class="grille">
 
             </div>
         </section>
