Modif page témoignage

--- a/temoignage.html
+++ b/temoignage.html
@@ -20,6 +20,10 @@
       <section>
         <div class="grid"></div>
       </section>
+      <div class="button">
+        <a href="#">proposer mon témoignage</a>
+        <a href="#">tous les témoignages</a>
+      </div>
     </article>
     <script src="js/API/temoignage.js"></script>
   </body>
