--- a/home.html
+++ b/home.html
@@ -62,38 +62,41 @@
             </p>
             <ul class="blocs_en_ligne">
                 <li>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                    <img src="img/velo1.jpg" alt="cycliste" class="TrouverMonVelo">
                     <div class="TexteSurPhoto">Hébergements</div>
                 </li>
                 <li>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                    <img src="img/velo2.jpg" alt="cycliste" class="TrouverMonVelo">
                     <div class="TexteSurPhoto">Lieux de visite</div>
                 </li>
                 <li>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                    <img src="img/velo3.jpg" alt="cycliste" class="TrouverMonVelo">
                     <div class="TexteSurPhoto">Office de Tourisme</div>
                 </li>
                 <li>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
+                    <img src="img/velo4.jpg" alt="cycliste" class="TrouverMonVelo">
                     <div class="TexteSurPhoto">Loueurs et réparateurs de vélo</div>
                 </li>
             </ul>
         </article>
-        <article id="Experiences">
-            <h2>
-                Ils l'ont fait
-            </h2>
-            <p>
-                Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
-            </p>
-            <section id="experiences_photos">
-                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-            </section>
-            <button class="BoutonTransparent">
-                Tous les témoignages
-            </button>
+        <article class="bloc_conteneur">
+            <img src="img/landscape.jpg" alt="landscape" id="landscape">
+            <div id="Experiences">
+                <h2>
+                    Ils l'ont fait
+                </h2>
+                <p>
+                    Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
+                </p>
+                <section id="experiences_photos">
+                    <img src="img/temoignage1.jpg" alt="cycliste" class="cycliste1">
+                    <img src="img/temoignage2.jpg" alt="cycliste" class="cycliste1">
+                    <img src="img/temoignage3.jpg" alt="cycliste" class="cycliste1">
+                </section>
+                <button class="BoutonTransparent">
+                    Tous les témoignages
+                </button>
+            </div>
         </article>
         <article class="BlocsContenuCentre BlocsReduits">
             <h2>
