--- a/home.html
+++ b/home.html
@@ -20,35 +20,37 @@
                 </p>
                 <img src="img/pictos-velodyssee3.jpg" alt="icones">
                 <form>
-                    <legend>Pédalez selon vos envies</legend>
-                    <label for="difficultes"></label>
-                    <select id="difficultes">
-                        <option value="">Toutes les difficultés</option>    
-                        <option value="debutant">Je débute/En famille</option>    
-                        <option value="intermediare">J'ai l'habitude</option>
-                        <option value="confirme">Je me dépasse</option>
-                    </select>
-                    <label for="duree"></label>
-                    <select id="difficultes">
-                        <option value="">Toutes les durées</option>    
-                        <option value="journee">Journée</option>    
-                        <option value="long">Long séjour (+7 jours)</option>
-                        <option value="semaine">A la semaine</option>
-                        <option value="court">Court séjour (3 à 5 jours)</option>
-                        <option value="weekend">Week-end</option>
-                    </select>
-                    <label for="thematiques"></label>
-                    <select id="thematiques">
-                        <option value="">Toutes les thématiques</option>    
-                        <option value="littoral">Le littoral</option>    
-                        <option value="nature">Nature et patrimoine</option>
-                        <option value="aufil">Au fil de l'eau</option>
-                        <option value="forets">Forêts et landes</option>
-                        <option value="famille">En famille</option>
-                        <option value="vignobles">Vignobles et gastronomie</option>
-                        <option value="Panoramas">Panoramas</option>
-                    </select>
-                    <button type="submit">Trouver mon parcours idéal</button>
+                    <fieldset>
+                        <legend>Pédalez selon vos envies</legend>
+                        <label for="difficultes"></label>
+                        <select id="difficultes">
+                            <option value="">Toutes les difficultés</option>    
+                            <option value="debutant">Je débute/En famille</option>    
+                            <option value="intermediare">J'ai l'habitude</option>
+                            <option value="confirme">Je me dépasse</option>
+                        </select>
+                        <label for="duree"></label>
+                        <select id="duree">
+                            <option value="">Toutes les durées</option>    
+                            <option value="journee">Journée</option>    
+                            <option value="long">Long séjour (+7 jours)</option>
+                            <option value="semaine">A la semaine</option>
+                            <option value="court">Court séjour (3 à 5 jours)</option>
+                            <option value="weekend">Week-end</option>
+                        </select>
+                        <label for="thematiques"></label>
+                        <select id="thematiques">
+                            <option value="">Toutes les thématiques</option>    
+                            <option value="littoral">Le littoral</option>    
+                            <option value="nature">Nature et patrimoine</option>
+                            <option value="aufil">Au fil de l'eau</option>
+                            <option value="forets">Forêts et landes</option>
+                            <option value="famille">En famille</option>
+                            <option value="vignobles">Vignobles et gastronomie</option>
+                            <option value="Panoramas">Panoramas</option>
+                        </select>
+                        <button type="submit">Trouver mon parcours idéal</button>
+                    </fieldset>
                 </form>
             </section>
             <div id="map"></div>
