--- a/temoignage.html
+++ b/temoignage.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
     <link rel="stylesheet" href="scss/main.css" />
     <title>temoignages</title>
   </head>
@@ -36,7 +40,53 @@
       </header>
       <section>
         <div class="avis">
-          <div class="card">1</div>
+          <div class="card">
+            <div class="card-heure">
+              <h4>ven 27/08/2021 - 18:26</h4>
+            </div>
+            <div class="card-infos">
+              <h1>sandie</h1>
+              <ul>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+                <li><i class="far fa-star"></i></li>
+              </ul>
+            </div>
+            <div class="etape">
+              <h3>Rostrenen / Mûr-de-Bretagne</h3>
+            </div>
+            <div class="note">
+              <ul>
+                <li>
+                  5 /5<br />
+                  <span>Sécurité</span>
+                </li>
+                <li>
+                  5 /5<br />
+                  <span>Balisage</span>
+                </li>
+                <li>
+                  5 /5<br />
+                  <span>Intérêt</span>
+                </li>
+                <li>
+                  5 /5<br />
+                  <span>Services</span>
+                </li>
+              </ul>
+            </div>
+            <p>
+              En famille<br />
+              Ça monte pour arriver au lac de Guerlédan mais ça se fait en
+              roulant tranquillement.
+            </p>
+            <div class="card-footer">
+              <h5>0 réponse</h5>
+              <h5>LIRE</h5>
+            </div>
+          </div>
         </div>
       </section>
     </article>
