--- a/home.html
+++ b/home.html
@@ -150,29 +150,27 @@
                 </div>
             </section>
         </article>
-        <article id="PartezEnVoyage">
-            <h2>
-                Partez en voyage, ils organisent tout pour vous !
-            </h2>
-            <p>
-                Besoin d'aide pour organiser vos vacances ? Premier voyage à vélo ?
-                Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
-            </p>
-            <section class="blocs_en_ligne">
-                <div>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                </div>
-                <div>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                </div>
-                <div>
-                    <img src="img/cycliste.jpg" alt="cycliste" class="cycliste">
-                </div>
-            </section>
-            <button class="BoutonTransparent">
-                Tous les séjours
-            </button>
+        <article class="bloc_conteneur">
+            <img src="img/landscape2.jpg" alt="landscape" id="landscape">
+            <div id="PartezEnVoyage">
+                <h2>
+                    Partez en voyage, ils organisent tout pour vous !
+                </h2>
+                <p>
+                    Besoin d'aide pour organiser vos vacances ? Premier voyage à vélo ?
+                    Des agences de voyages spécialisées vélo vous proposent des séjours clés en main. Partez serein et l'esprit libre.
+                </p>
+                <section id="PartezEnVoyage_photos">
+                    <img src="img/temoignage1.jpg" alt="cycliste" class="cycliste1">
+                    <img src="img/temoignage2.jpg" alt="cycliste" class="cycliste1">
+                    <img src="img/temoignage3.jpg" alt="cycliste" class="cycliste1">
+                </section>
+                <button class="BoutonTransparent">
+                    Tous les séjours
+                </button>
+            </div>
         </article>
+
     </main>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet-gpx/1.7.0/gpx.min.js"></script>
