Modif temoignage + api

--- a/temoignage.html
+++ b/temoignage.html
@@ -39,55 +39,7 @@
         </h3>
       </header>
       <section>
-        <div class="avis">
-          <div class="card">
-            <div class="card-heure">
-              <h4>ven 27/08/2021 - 18:26</h4>
-            </div>
-            <div class="card-infos">
-              <h1>sandie</h1>
-              <ul>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-                <li><i class="far fa-star"></i></li>
-              </ul>
-            </div>
-            <div class="etape">
-              <h3>Rostrenen / Mûr-de-Bretagne</h3>
-            </div>
-            <div class="note">
-              <ul>
-                <li>
-                  5 /5<br />
-                  <span>Sécurité</span>
-                </li>
-                <li>
-                  5 /5<br />
-                  <span>Balisage</span>
-                </li>
-                <li>
-                  5 /5<br />
-                  <span>Intérêt</span>
-                </li>
-                <li>
-                  5 /5<br />
-                  <span>Services</span>
-                </li>
-              </ul>
-            </div>
-            <p>
-              En famille<br />
-              Ça monte pour arriver au lac de Guerlédan mais ça se fait en
-              roulant tranquillement.
-            </p>
-            <div class="card-footer">
-              <h5>0 réponse</h5>
-              <h5>LIRE</h5>
-            </div>
-          </div>
-        </div>
+        <div class="avis"></div>
       </section>
     </article>
     <script src="js/API/temoignage.js"></script>
