modif temoignage cards

--- a/temoignage.html
+++ b/temoignage.html
@@ -38,7 +38,7 @@
           parcourus !
         </h3>
       </header>
-      <section>
+      <section class="avis-section">
         <div class="avis"></div>
       </section>
     </article>
