--- a/nav.html
+++ b/nav.html
@@ -21,6 +21,12 @@
             <li>
                 <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
             </li>
+            <li>
+                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
+            </li>
         </ul>
 
         <ul class="subnav"></ul>
