Ajout blocs API

--- a/home.html
+++ b/home.html
@@ -90,10 +90,7 @@
                 <p>
                     Ces retours d'expérience sont précieux pour vous aider à préparer votre parcours sur La Vélodyssée. Inspirez-vous !
                 </p>
-                <section id="experiences_photos">
-                    <img src="img/temoignage1.jpg" alt="cycliste" class="cycliste1">
-                    <img src="img/temoignage2.jpg" alt="cycliste" class="cycliste1">
-                    <img src="img/temoignage3.jpg" alt="cycliste" class="cycliste1">
+                <section id="experiences_photos" class="temoignage_conteneur">
                 </section>
                 <button class="BoutonTransparent">
                     Tous les témoignages
