Ajout de la première nav

--- a/nav.html
+++ b/nav.html
@@ -18,15 +18,23 @@
     <header class="head">
       <nav>
         <ul class="nav">
-            <li>
-                <a href="https://www.instagram.com/?hl=fr" target="_blank"><i class="fab fa-instagram"></i></a>
-            </li>
-            <li>
-                <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-f"></i></a>
-            </li>
-            <li>
-                <a href="https://www.youtube.com/" target="_blank"><i class="fab fa-youtube"></i></a>
-            </li>
+          <li>
+            <a href="https://www.instagram.com/?hl=fr" target="_blank"
+              ><i class="fab fa-instagram"></i></a>
+          </li>
+          <li>
+            <a href="https://www.facebook.com/" target="_blank"
+              ><i class="fab fa-facebook-f"></i></a>
+          </li>
+          <li>
+            <a href="https://www.youtube.com/" target="_blank"
+              ><i class="fab fa-youtube"></i></a>
+          </li>
+          <li class="mail">
+              S'abonner à la newsletter
+              <input type="email" name="news" id="mail">
+              <input type="submit" value="JE M'INSCRIS" id="submit">
+          </li>
         </ul>
 
         <ul class="subnav"></ul>
@@ -58,15 +66,24 @@
         />
         <label for="button-3" class="button-label-3"></label>
 
-
         <label for="button-1" class="sp-arrow sp-a1"></label>
         <label for="button-2" class="sp-arrow sp-a2"></label>
         <label for="button-3" class="sp-arrow sp-a3"></label>
 
         <div class="contenu">
           <ul class="slider clearfix">
-            <li><img src="img/B9724016803Z.1_20200716164949_000+GD1GB7220.1-0.jpg" alt="image01" /></li>
-            <li><img src="img/patrimoine-remarquable_news_image_top.jpg" alt="image02" /></li>
+            <li>
+              <img
+                src="img/B9724016803Z.1_20200716164949_000+GD1GB7220.1-0.jpg"
+                alt="image01"
+              />
+            </li>
+            <li>
+              <img
+                src="img/patrimoine-remarquable_news_image_top.jpg"
+                alt="image02"
+              />
+            </li>
             <li><img src="img/St_omer_cathedrale_ND.jpg" alt="image03" /></li>
           </ul>
         </div>
