Ajout de la second nav en fixe

--- a/nav.html
+++ b/nav.html
@@ -37,7 +37,23 @@
           </li>
         </ul>
 
-        <ul class="subnav"></ul>
+        <ul class="subnav">
+            <li>
+               <a href="home.html"><img src="img/logo.png" alt=""></a>
+            </li>
+            <li>
+                <a href="itineraire.html">L'ITINÉRAIRE</a>
+            </li>
+            <li>
+                <a href="temoignage.html">TÉMOIGNAGES</a>
+            </li>
+            <li>
+                <a href="infos-pratiques.html">INFOS PRATIQUES</a>
+            </li>
+            <li>
+                <a href="news.html">NEWS</a>
+            </li>
+        </ul>
       </nav>
 
       <div class="slideshow">
@@ -89,6 +105,7 @@
         </div>
       </div>
     </header>
+    
 
     <script src="js/header.js"></script>
   </body>
