Ajout des fichiers itineraires

--- a/itineraire.html
+++ b/itineraire.html
@@ -6,18 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="scss/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <title>Intinéraire</title>
 </head>
 <body>
     <div class="itineraire-grid">
-        <div class="container-etapes">
+        <div class="grille-etapes">
+            <!-- <div class="download-gpx">
+                <a href=""><i class="fas fa-file-download"></i> TÉLÉCHARGER LE .GPX DE LA LA VÉLOMARITIME / EUROVELO 5</a>
+            </div> -->
 
         </div>
         <div class="container-map">
-
         </div>
     </div>
     <script src="js/API/itineraire.js"></script>
 </body>
 </html>
+
+
+
+
+
+
+<!-- 55 -->
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro ea minima voluptatibus inventore autem mollitia eos quia officia perspiciatis. Consequatur accusamus, rerum nisi nostrum esse aliquid mollitia sapiente vero quia similique! Voluptates dicta reprehenderit quia eius vero maiores consectetur facere. Optio eaque in reiciendis, eius quasi perferendis velit, ut eveniet facilis excepturi iste! Possimus, deleniti!
+
+<!-- 25 -->
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet eligendi possimus vitae sit quis fugiat cum esse, quidem cumque dolores facere repudiandae fugit incidunt amet.
